--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "employee skills api",
   "main": "index.js",
   "scripts": {
+    "build": "babel index.js -d dist",
+    "start": "npm run build && nodemon dist/index.js",
     "test": "test"
   },
   "repository": {
@@ -19,5 +21,11 @@
   "bugs": {
     "url": "https://github.com/GRamirez2/ssApi/issues"
   },
-  "homepage": "https://github.com/GRamirez2/ssApi#readme"
+  "homepage": "https://github.com/GRamirez2/ssApi#readme",
+  "devDependencies": {
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.0",
+    "nodemon": "^2.0.15"
+  }
 }
