--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon --exec npm run restart",
     "restart": "rimraf dist && npm run build && npm run start",
     "start": "node dist/index.js",
-    "lint": "eslint . --ext .js",
+    "lint": "eslint ./src --ext .js",
     "test": "test"
   },
   "repository": {
