--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ssapi",
+  "name": "single-stone-skills-api",
   "version": "1.0.0",
   "description": "employee skills api",
   "main": "index.js",
@@ -42,6 +42,9 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.16.2"
   }
 }
